# configuring-sagemaker-training-jobs-with-hydra

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  Dockerfile  README.md  THIRD_PARTY_LICENSES  pyproject.toml
infra/: hydra-sagemaker-setup.yaml
media/: architecture.drawio
mypackage/: evaluation.py  train.py
mypackage/config/: config.yaml  config_utils.py
mypackage/config/evaluation/: default.yaml
mypackage/config/model/: default.yaml
mypackage/config/sagemaker/: default.yaml
scripts/: create_and_push_image.sh  download_data.py  sagemaker_entrypoint.py  start_sagemaker_hpo_job.py  start_sagemaker_training_job.py
